--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.21.5",
     "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
     "echarts": "^5.5.1",
     "mockjs": "^1.1.0",
     "react": "^18.3.1",
